Migrated the solution from HSQL to an in memory Mongo-DB. Also wired everything together so that the APIs now talk to each other correctly and flight costs are calculated realtime when querying or booking flights

--- a/cost-service/pom.xml
+++ b/cost-service/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ulrich.matthiae.spring.clouddemo</groupId>
-    <artifactId>flight-service</artifactId>
+    <artifactId>cost-service</artifactId>
 
     <dependencies>
         <dependency>
