--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=workout-service
-server.port=8101
+spring.application.name=flight-service
+server.port=8201
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
