--- a/cost-service/src/main/resources/application.properties
+++ b/cost-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=flight-service
-server.port=8201
+spring.application.name=cost-service
+server.port=8301
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
