--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
     <modules>
 		<module>flight-service</module>
-		<module>cost-service</module>
 		<module>booking-service</module>
+		<module>cost-service</module>
 		<module>eureka-server</module>
 		<module>zuul-server</module>
 	</modules>
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.RELEASE</version>
+		<version>2.0.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -29,7 +29,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<spring-cloud.version>Finchley.M8</spring-cloud.version>
+		<spring-cloud.version>Finchley.SR1</spring-cloud.version>
+		<de.flapdoodle.embed.mongo.version>2.1.1</de.flapdoodle.embed.mongo.version>
 	</properties>
 
 	<dependencyManagement>
@@ -40,6 +41,18 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+
+			<!--Mongo DB -->
+			<dependency>
+				<groupId>de.flapdoodle.embed</groupId>
+				<artifactId>de.flapdoodle.embed.mongo</artifactId>
+				<version>${de.flapdoodle.embed.mongo.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>cz.jirutka.spring</groupId>
+				<artifactId>embedmongo-spring</artifactId>
+				<version>RELEASE</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
