--- a/cost-service/src/main/resources/application.properties
+++ b/cost-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=cost-service
 server.port=8301
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+management.endpoints.web.exposure.include=*
+spring.cloud.config.uri=http://localhost:8888
