--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>cost-service</module>
 		<module>eureka-server</module>
 		<module>zuul-server</module>
+		<module>config-server</module>
 	</modules>
     <packaging>pom</packaging>
 
