Newer lombok, for jdk 10.

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.4</version>
+			</dependency>
 
 			<!--Mongo DB -->
 			<dependency>
