--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8201
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-management.endpoints.web.exposure.include=hystrix.stream
+management.endpoints.web.exposure.include=*
