--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>zuul-server</module>
 		<module>config-server</module>
 		<module>turbine-server</module>
+		<module>cloud-gateway-server</module>
 	</modules>
     <packaging>pom</packaging>
 
