Additional tweaks, fixes and cleanups

--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -4,3 +4,11 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 management.endpoints.web.exposure.include=*
+logging.level.org.apache.http=TRACE
+
+# Ribbon and Hystrix both have string default timout properties that do not work well in most situations
+# NB to ensure hystrix timeouts are lower than ribbon http client timeouts to ensure hystrix takes precedence in failover mechanisms
+#hystrix.command.default.execution.timeout.enabled=false
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
+#ribbon.ReadTimeout=60000
+#ribbon.ConnectTimeout=60000
