--- a/turbine-server/src/main/resources/application.properties
+++ b/turbine-server/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=turbine-server
 server.port=9090
-
+spring.cloud.config.uri=http://localhost:9000
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
-
 turbine.appConfig= flight-service,cost-service
 turbine.clusterNameExpression= new String("default")
