--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=booking-service
 server.port=8101
+spring.cloud.config.uri=http://localhost:9000
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
