--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=config-server
-server.port=8888
+# 8888 is default but on some systems this is used by something else
+server.port=9000
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.cloud.config.server.git.uri=https://github.com/ulrich-matthiae/cloud-flights-config
