--- a/cost-service/src/main/resources/application.properties
+++ b/cost-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=cost-service
 server.port=8301
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
-management.endpoints.web.exposure.include=hystrix.stream
-spring.cloud.config.uri=http://localhost:8888
+management.endpoints.web.exposure.include=hystrix.stream,info,refresh
