spring cloud upgrade with resilience4j

--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8101
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+spring.data.mongodb.database=bookings
+spring.data.mongodb.port=27019
+spring.mongodb.embedded.version=4.0.2
+spring.config.import=optional:configserver:http://localhost:9000
