--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=config-server
 server.port=9000
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.cloud.config.server.git.uri=https://github.com/ulrich-matthiae/cloud-flights-config
+spring.cloud.config.server.git.default-label=master
