--- a/cost-service/src/main/resources/application.properties
+++ b/cost-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=cost-service
 server.port=8301
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
-management.endpoints.web.exposure.include=hystrix.stream,info,refresh
+management.endpoints.web.exposure.include=info,refresh
+spring.config.import=optional:configserver:http://localhost:9000
