--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=eureka-server
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+spring.cloud.config.enabled=false
