--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=flight-service
 server.port=8201
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+spring.config.import=optional:configserver:http://localhost:9000
+#spring.data.mongodb.database=flights
+#spring.data.mongodb.port=27012
+spring.mongodb.embedded.version=3.4.3
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-management.endpoints.web.exposure.include=*
 logging.level.org.apache.http=TRACE
 
 # Ribbon and Hystrix both have string default timout properties that do not work well in most situations
