--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 		<module>booking-service</module>
 		<module>cost-service</module>
 		<module>eureka-server</module>
-		<module>zuul-server</module>
+<!--		<module>zuul-server</module>-->
 		<module>config-server</module>
-		<module>turbine-server</module>
+<!--		<module>turbine-server</module>-->
 		<module>cloud-gateway-server</module>
 	</modules>
     <packaging>pom</packaging>
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.8.RELEASE</version>
+		<version>2.7.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -32,7 +32,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+		<spring-cloud.version>2021.0.4</spring-cloud.version>
 		<de.flapdoodle.embed.mongo.version>2.1.1</de.flapdoodle.embed.mongo.version>
 	</properties>
 
@@ -53,11 +53,11 @@
 			</dependency>
 
 			<!--Mongo DB -->
-			<dependency>
-				<groupId>de.flapdoodle.embed</groupId>
-				<artifactId>de.flapdoodle.embed.mongo</artifactId>
-				<version>${de.flapdoodle.embed.mongo.version}</version>
-			</dependency>
+<!--			<dependency>-->
+<!--				<groupId>de.flapdoodle.embed</groupId>-->
+<!--				<artifactId>de.flapdoodle.embed.mongo</artifactId>-->
+<!--				<version>${de.flapdoodle.embed.mongo.version}</version>-->
+<!--			</dependency>-->
 			<dependency>
 				<groupId>cz.jirutka.spring</groupId>
 				<artifactId>embedmongo-spring</artifactId>
@@ -67,21 +67,6 @@
 	</dependencyManagement>
 
 	<dependencies>
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.2.11</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-core</artifactId>
-			<version>2.2.11</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
-			<version>2.2.11</version>
-		</dependency>
 		<dependency>
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
