Add demos for cloud components part 2

--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.h2.console.enabled=true
 spring.data.mongodb.database=bookings
 spring.data.mongodb.port=27019
 spring.mongodb.embedded.version=4.0.2
-spring.config.import=optional:configserver:http://localhost:9000
+spring.config.import=configserver:http://localhost:9000
+spring.cloud.stream.output-bindings=bookingEvents
+spring.cloud.stream.bindings.bookingEvents-out-0.destination=booking-events
