--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=flight-service
 server.port=8201
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
-spring.config.import=optional:configserver:http://localhost:9000
+spring.config.import=configserver:http://localhost:9000
 #spring.data.mongodb.database=flights
 #spring.data.mongodb.port=27012
 spring.mongodb.embedded.version=3.4.3
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-logging.level.org.apache.http=TRACE
+#logging.level.org.apache.http=TRACE
 
 # Ribbon and Hystrix both have string default timout properties that do not work well in most situations
 # NB to ensure hystrix timeouts are lower than ribbon http client timeouts to ensure hystrix takes precedence in failover mechanisms
