--- a/functional-cost-service/pom.xml
+++ b/functional-cost-service/pom.xml
@@ -9,12 +9,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ulrich.matthiae.spring.clouddemo</groupId>
-    <artifactId>cost-service</artifactId>
+    <artifactId>functional-cost-service</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-function-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -48,6 +52,7 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-sleuth</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
