--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -4,3 +4,5 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 spring.cloud.config.enabled=false
 eureka.instance.preferIpAddress=true
+eureka.instance.metadataMap.prometheus.scrape=true
+eureka.instance.metadataMap.prometheus.path=/actuator/prometheus
